implemented exif tag read functionality and sorted files

--- a/src/xif.Lib/xif.Lib.csproj
+++ b/src/xif.Lib/xif.Lib.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeExtensions.cs" />
+    <Compile Include="FileManager.cs" />
     <Compile Include="IImageInfo.cs" />
     <Compile Include="ImageInfo.cs" />
     <Compile Include="IParser.cs" />
